--- a/Knapper/Knapper.csproj
+++ b/Knapper/Knapper.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ILGPU" Version="1.3.1" />
+    <PackageReference Include="ILGPU.Algorithms" Version="1.3.1" />
+  </ItemGroup>
+
 </Project>
