--- a/Knapper/Knapper.csproj
+++ b/Knapper/Knapper.csproj
@@ -1,15 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.21.5" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.51.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.51.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.51.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="ILGPU" Version="1.3.1" />
     <PackageReference Include="ILGPU.Algorithms" Version="1.3.1" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Protobuf Include="Distributed\knapsack.proto" GrpcServices="Client" />
+  </ItemGroup>
 </Project>
